# llava-eval-and-viz

./: .gitignore  README.md  eng_tokens.txt  eng_words.txt  main.py  out.txt  pyproject.toml  word_and_image_vectors.pkl  word_and_image_vectors_max.pkl  word_and_image_vectors_mean.pkl
vision_eval/: rg_vision_api.sh  rg_vlm.sh  run_inference_vlm.py  run_inference_vlm_api.py  run_vlm_response_eval.py  run_vlm_response_eval_api.py
vision_eval/responses_gpt4v_eval/: Qwen-VL-Chat_evaluation.json  Yi-VL-34B_evaluation.json  Yi-VL-6B_evaluation.json  claude-3-haiku-20240307_evaluation.json  claude-3-opus-20240229_evaluation.json  claude-3-sonnet-20240229_evaluation.json  gemini-pro-vision_evaluation.json  gpt-4-vision-preview_evaluation.json  llava-1.5-13b-hf_evaluation.json  llava-1.5-7b-hf_evaluation.json  llava-v1.6-34b-hf_evaluation.json  llava-v1.6-mistral-7b-hf_evaluation.json
vision_eval/responses_vision/: Qwen-VL-Chat_responses.json  Yi-VL-34B_responses.json  Yi-VL-6B_responses.json  _fix_vlm_json.py  claude-3-haiku-20240307_responses.json  claude-3-opus-20240229_responses.json  claude-3-sonnet-20240229_responses.json  gemini-pro-vision_responses.json  gpt-4-vision-preview_responses.json  llava-1.5-13b-hf_responses.json  llava-1.5-7b-hf_responses.json  llava-v1.6-34b-hf_responses.json  llava-v1.6-mistral-7b-hf_responses.json
vision_eval/vlm_output/: Qwen-VL-Chat_eval_data_output.json  Yi-VL-34B_eval_data_output.json  Yi-VL-6B_eval_data_output.json  claude-3-haiku-20240307_eval_data_output.json  claude-3-opus-20240229_eval_data_output.json  (+7 more)
(+9 files in other folders)
